refactor(配置): 更新路径别名和eslint规则
- 在tsconfig中重构路径别名，增加模块化组织
- 调整eslint文件名命名规则优先级
- 在home路由中添加Card组件导入

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,13 @@
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "@root": ["./app/*"],
+      "@blog/ui": ["./app/ui"],
+      "@blog/ui/*": ["./app/ui/*"],
+      "@blog/modules": ["./app/modules"],
+      "@blog/modules/*": ["./app/modules/*"],
+      "@blog/routes": ["./app/routes"],
+      "@blog/routes/*": ["./app/routes/*"]
     },
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
