refactor(components): 重构组件目录结构并添加新的UI组件
- 将UI组件从app/ui迁移到app/components目录
- 添加新的Radix UI组件（Accordion, Avatar, NavigationMenu）
- 更新路由配置和页面组件
- 修改tsconfig和components.json中的路径别名
- 添加tailwindcss工具类合并工具
- 更新package.json依赖

--- a/components.json
+++ b/components.json
@@ -11,11 +11,11 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "~/components",
-    "utils": "~/lib/utils",
-    "ui": "~/components/ui",
-    "lib": "~/lib",
-    "hooks": "~/hooks"
+    "components": "@blog/components",
+    "utils": "@blog/components/utils",
+    "ui": "@blog/components/ui",
+    "lib": "@blog/components/lib",
+    "hooks": "@blog/components/hooks"
   },
   "iconLibrary": "lucide"
 }
