chore: 添加prettier配置并整合eslint-prettier
- 新增.prettierrc和.prettierignore配置文件
- 添加eslint-config-prettier依赖以整合prettier和eslint
- 清理并格式化多个配置文件
- 调整tsconfig路径顺序

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,13 +15,13 @@
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
     "paths": {
-      "@root": ["./app/*"],
       "@blog/components": ["./app/components"],
       "@blog/components/*": ["./app/components/*"],
       "@blog/modules": ["./app/modules"],
       "@blog/modules/*": ["./app/modules/*"],
       "@blog/routes": ["./app/routes"],
-      "@blog/routes/*": ["./app/routes/*"]
+      "@blog/routes/*": ["./app/routes/*"],
+      "@root": ["./app/*"]
     },
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
