--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-check-file": "^3.3.0",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.2.0",
