feat: 添加新的路径别名和依赖项
- 在tsconfig中添加@blog/apis路径别名
- 添加@radix-ui/react-visually-hidden和dayjs依赖
- 更新eslint配置和vscode设置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,8 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "css.customData": [".vscode/tailwind.json"]
+  "css.customData": [
+    ".vscode/tailwind.json"
+  ],
+  "editor.formatOnSave": true
 }
