--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-router": "^7.5.3",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
