--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.6.0",
+    "es-toolkit": "^1.39.8",
     "isbot": "^5.1.27",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
