feat(icons): 添加左右箭头和关闭图标组件
- 新增 IconLeft, IconRight 和 IconClose 组件
- 重构图标变体逻辑到单独文件
- 在轮播组件中添加指针导航功能
- 更新 tsconfig 添加 assets 路径别名

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
       "@blog/routes/*": ["./app/routes/*"],
       "@blog/apis": ["./app/apis"],
       "@blog/apis/*": ["./app/apis/*"],
+      "@blog/assets": ["./app/assets"],
+      "@blog/assets/*": ["./app/assets/*"],
       "@root": ["./app/*"]
     },
     "esModuleInterop": true,
